fixed Button spacing from bottom

--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -1,8 +1,7 @@
 button.cta {
   display: block;
   margin: 0 auto;
-  max-width: 650px;
-  min-width: 300px;
+  width: 358px;
   height: 82px;
   background: #000000;
   color: #FFFFFF;
@@ -10,4 +9,7 @@ button.cta {
   font-weight: 590;
   font-size: 32px;
   text-align: center;
+  /* move the button 72 pixel above the bottom of the viewport */
+  position: fixed;
+  bottom: 72px;
 }
